--- a/index.html
+++ b/index.html
@@ -1,2 +1,84 @@
-<h1>Contemporary Net Art</h1>
-<h2>by nai</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naihla's Website</title>
+    <style>
+        body {
+            font family: optima, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+
+        header {
+            background-color: #fff0fa;
+            color: ##f46dbb;
+            padding: 1em;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        h1, h2 {
+            color: ##f46dbb;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1em;
+            background-color: #fff0fa;
+            color: #fff;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Naihla Saepharn - Dawkins</h1>
+            Student / Entrepeneur / Daughter / Sister
+      
+    </header>
+
+    <section>
+        <img src="your-profile-image.jpg" alt="Your Name">
+        <h2>Who Is Naihla Dawkins?</h2>
+      <p>
+	Hii! Welcolme to my page! To whom is reading, this is Naihla, pronounced NY-LA. (Not too sure why my parents spelt it like that either). Thats me! (on the far right) and those are my two best friends beside me whom I spend a lot of my time with. 
+        <div>
+          I’m a full time student at the university of waterloo studying Global Business and Digital Arts (i almost ran out of breath reading that too). I am in my second year of the program going into my 2B term this fall. Unlike a lot of people i cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home and I want to study abroad during my fourth term! 
+
+	</div>
+      </p>
+    </section>
+
+    <footer>
+        &copy; 2023 Your Name
+    </footer>
+
+</body>
+</html>
+
