--- a/index.html
+++ b/index.html
@@ -67,11 +67,26 @@
         <img src="your-profile-image.jpg" alt="Your Name">
         <h2>Who Is Naihla Dawkins?</h2>
       <p>
-	Hii! Welcolme to my page! To whom is reading, this is Naihla, pronounced NY-LA. (Not too sure why my parents spelt it like that either). Thats me! (on the far right) and those are my two best friends beside me whom I spend a lot of my time with. 
-        <div>
-          I’m a full time student at the university of waterloo studying Global Business and Digital Arts (i almost ran out of breath reading that too). I am in my second year of the program going into my 2B term this fall. Unlike a lot of people i cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home and I want to study abroad during my fourth term! 
+				Hii! Welcolme to my blog! To whom is reading, this is Naihla, pronounced NY-LA. (not too sure why my parents spelt it like that either). Thats me! (on the far right) and those are my two best friends beside me whom I spend a lot of my time with. 
+        <br>  
+       	 <br>
+        I’m a full time student at the University of Waterloo studying Global Business and Digital Arts (i almost ran out of breath reading that too). I am in my second year of the program going into my 2B term this fall. Unlike a lot of people I cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home and I want to study abroad during my fourth term!
+        <br> 
+        <br> 
+        I come from a family of 6. I have 3 sibilings, 1 older and 2 younger, all sisters (yes my dad loves being the only man in the house). I'm half Jamaican and half Laotion. Whenever I ask people to guess my enthinicy I usually get Cambodian, Filipina, or Thai, I once even got Latina lol. 
+        <br>
+        <br> 
+        When I’m not studying I spend my time working. I work part time at Footlocker and run my own business, NaiBeauti. I offer both lash and nail services, working with women of all ages to feel beautiful in thier own skin. 
+        <br> 
+        <br>
+        When I was 16, I got my eyelashes done for the first time ever and fell in love. I was obsessed with the way it made me feel. Confident and beautiful. Since then, I have been getting them done since and was granted the oppurtunity to experince being on the other side of the service.
+        <br>
+        <br>
+        I love being a business owner because of the goals I get to accomplosh, milestones i reach, and doors it opens. For more information or inquires feel free to contact me through any of the channels below or <a href= "https://www.instagram.com/naibeautii/" > press me </a> to visit my page and view my portfolio.  
 
-	</div>
+  
+      
+      
       </p>
     </section>
 
