--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
             bottom: 0;
             width: 100%;
         }
+      
+      a:link {
+  					color: #f46dbb;
+  					background-color: transparent;
+  					text-decoration: none;
+				}
+
+a:hover {
+  color: #0000FF;
+  background-color: transparent;
+  text-decoration: underline;
+}
     </style>
 </head>
 <body>
@@ -68,23 +80,24 @@
         <img src="your-profile-image.jpg" alt="Your Name">
         <h2>Who Is Naihla Dawkins?</h2>
       <p>
-				Hii! Welcolme to my blog! To whom is reading, this is Naihla, pronounced NY-LA but most people call me Nai. Thats me! (on the far right) and those are my two best friends beside me whom I spend a lot of my time with. 
+				Hii! Welcolme to my blog! To whom is reading, this is Naihla, pronounced NY-LA but most people call me Nai. Thats me! <strong> (on the far right) </strong> and those are my two best friends beside me whom I spend a lot of my time with. 
         <br>  
        	 <br>
-        I’m a full time student at the University of Waterloo studying Global Business and Digital Arts (i almost ran out of breath reading that too). I am in my second year of the program going into my 2B term this fall. Unlike a lot of people I cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home and I want to study abroad during my fourth term!
+        I’m a full time student at the University of Waterloo studying Global Business and Digital Arts <strong> (i almost ran out of breath reading that too)</strong>. I am in my second year of the program going into my 2B term this fall. Unlike a lot of people I cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home and I want to study abroad during my fourth term! <p>For any inquires regarding design projects, you can reach me through my school email <a href="mailto:someone@example.com">here</a>. 
+
         <br> 
         <br> 
-        I come from a family of 6. I have 3 sibilings, 1 older and 2 younger, all sisters (yes my dad loves being the only man in the house). I'm half Jamaican and half Laotion. Whenever I ask people to guess my enthinicy I usually get Cambodian, Filipina, or Thai, I once even got Latina lol. 
+        I come from a family of 6. I have 3 sibilings, 1 older and 2 younger, all sisters <strong> (i know what you're thinking, my poor dad right!)</strong>. I'm half Jamaican and half Laotion. Whenever I ask people to guess my enthinicy I usually get Cambodian, Filipina, or Thai, I once even got Latina lol. 
         <br>
         <br> 
-        When I’m not studying I spend my time working. I work part time at Footlocker and run my own business, NaiBeauti. I offer both lash and nail services, working with women of all ages to feel beautiful in thier own skin. 
+        When I’m not studying I spend my time working. I work part time at Footlocker and run my own business, <i>NaiBeauti</i>. I offer both lash and nail services, working with women of all ages to feel beautiful in thier own skin. 
         <br> 
         <br>
         When I was 16, I got my eyelashes done for the first time ever and fell in love. I was obsessed with the way it made me feel. Confident and beautiful. Since then, I have been getting them done since and was granted the oppurtunity to experince being on the other side of the service.
         <br>
         <br>
         I love being a business owner because of the goals I get to accomplosh, milestones i reach, and doors it opens. For more information or inquires feel free to contact me through any of the channels below or <a href= "https://www.instagram.com/naibeautii/" > press me </a> to visit my page. View my portfolio below!  
-      </p>
+      	</p>
       
         <!--
 				Code copied from: https://www.sociablekit.com/app/users/widgets/update_embed/243504#profile
@@ -105,17 +118,3 @@
 
 </body>
 </html>
-
-
-<!--
-Code copied from: https://www.sociablekit.com/app/users/widgets/update_embed/243504#profile
-Author: SociableKIT
-Name: Instagram Feed Display
-Description: Displays an instagram feed.
-Date retrieved: Dec. 17, 2023.
--->
-
-<!-- Copied code starts -->
-
-
-
