--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         h1, h2 {
             color: ##f46dbb;
+          text-align: center;
         }
 
         img {
@@ -78,7 +79,7 @@ a:hover {
 
     <section>
         <img src="your-profile-image.jpg" alt="Your Name">
-        <h2>Who Is Naihla Dawkins?</h2>
+        <centre> <h2>Who Is Naihla Dawkins?</h2> </centre>
       <p>
 				Hii! Welcolme to my blog! To whom is reading, this is Naihla, pronounced NY-LA but most people call me Nai. Thats me! <strong> (on the far right) </strong> and those are my two best friends beside me whom I spend a lot of my time with. 
         <br>  
