--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <header>
       <h1>Naihla Saepharn-Dawkins</h1>
-            Student / Entrepeneur / Designer / Sister  
+            Student / Sister / Entrepeneur / Designer   
 		</header>
     <section>
         <img src="image22.jpg" alt="Your Name">
