--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <br>  
 				<br>
         I’m a full time student at the University of Waterloo studying Global Business and Digital Arts <strong> (i almost ran out of breath reading that too)</strong>. I am in my second year of the program going into my 2B term this winter. Unlike a lot of people I cross paths with, I was born and raised in Waterloo and have lived here my whole life. When deciding on post secondary, I chose Waterloo because it’s close to home, the program is one of a kind, and I want to study abroad during my fourth term! I am passionate about design, business, and user experience and look forward to a career in this field post-graduation.
-      <p>For any inquires regarding design projects, you can reach me through my school email <a href="mailto:someone@example.com">here</a>. 
+      <p>For any inquires regarding design projects, you can reach me through my school email <a href="mailto:nssaepha@uwaterloo.ca">here</a>. 
         <br> 
         <br> 
         I come from a busy household of six. I have 3 sibilings, 1 older and 2 younger, all sisters <strong> (yes, I can feel the sympathy for my dad pouring in)</strong>. My roots are a vibrant mix of Jamaican and Laotian heritage. It's always amusing to see people try to guess my ethnicity; the most common guesses include Cambodian, Filipina, or Thai. I once even got Latina lol! 
