--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
       <td>Naibeauti@gmail.com</td>
       <td>Naibeautii</td>
     </tr>
+    <tr>
+      <td>Nssaepha</td>
+      <td>Nssaepha@uwaterloo.ca</td>
+      <td>N/A</td>
+    </tr>
   </tbody>
 </table>
       &#160;
